<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/leaderLayout"
    >

    <TextView
        android:id="@+id/rangeSelectionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/rangeSelection"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/rangeSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:max="25"
        android:progress="10"
        app:layout_constraintTop_toTopOf="@id/rangeSelectionText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/rangeDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PLACEHOLDER"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rangeSlider"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/entertainmentCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entertainment_categories"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rangeDisplay"
        app:layout_constraintVertical_bias="0.01" />

    <RadioGroup
        android:id="@+id/categoryGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entertainmentCategories"
        >
        <RadioButton android:id="@+id/aeCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arts_amp_entertainment"
            />
        <RadioButton android:id="@+id/bsCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beauty_amp_spas"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/fCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/nCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nightlife"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/rCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurants"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/sCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping"
            android:onClick="onRadioButtonClicked"/>
</RadioGroup>

    <Button
        android:id="@+id/beginSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryGroup"
        android:text="@string/begin_search"
        >
    </Button>

    <TextView
        android:id="@+id/leaderList"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/leader"
        app:layout_constraintTop_toBottomOf="@id/beginSearchButton" />

    <TextView
        android:id="@+id/memberList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/members"
        app:layout_constraintTop_toBottomOf="@id/leaderList" />

</androidx.constraintlayout.widget.ConstraintLayout>