<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="8dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="vertical">

        <!--image view for place image-->
        <ImageView
            android:id="@+id/cardPlaceImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop" />

        <!--text view for our place name-->
        <TextView
            android:id="@+id/cardPlaceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/place_name"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <!--text view for our place rating-->
            <TextView
                android:id="@+id/cardPlaceRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/rating"
                android:textColor="@color/black" />

            <!--text view for our place price-->
            <TextView
                android:id="@+id/cardPlacePrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/price"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <!--text view for our place review number-->
            <TextView
                android:id="@+id/cardPlaceReviewNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/number_of_reviews"
                android:textColor="@color/black" />

            <!--text view for our place alias-->
            <TextView
                android:id="@+id/cardPlaceAlias"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="@string/alias"
                android:textColor="@color/black" />
        </LinearLayout>

        <!--text view for our place description-->
        <TextView
            android:id="@+id/cardPlaceDescription"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/description"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
